Adding before for module 6